@@ -693,6 +693,18 @@ speed_mpn_bdiv_dbm1c (struct speed_params *s)
   SPEED_ROUTINE_MPN_BDIV_DBM1C (mpn_bdiv_dbm1c);
 }
 
+double
+speed_mpn_bdiv_q_1 (struct speed_params *s)
+{
+  SPEED_ROUTINE_MPN_BDIV_Q_1 (mpn_bdiv_q_1);
+}
+
+double
+speed_mpn_bdiv_q_1_pi1 (struct speed_params *s)
+{
+  SPEED_ROUTINE_MPN_BDIV_Q_1_PI1 (mpn_bdiv_q_1_pi1);
+}
+
 #if HAVE_NATIVE_mpn_modexact_1_odd
 double
 speed_mpn_modexact_1_odd (struct speed_params *s)
